fix: update extended features title with label alignment (#1271)
* fix: update extended features title styles

--- a/src/blocks/ExtendedFeatures/ExtendedFeatures.scss
+++ b/src/blocks/ExtendedFeatures/ExtendedFeatures.scss
@@ -26,6 +26,7 @@ $block: '.#{$ns}ExtendedFeaturesBlock';
             margin: inherit;
             display: block;
             margin-block: 0 $indentXXXS;
+            @include heading4();
         }
 
         &-title {
